--- a/src/pages/SessionType/SessionType.scss
+++ b/src/pages/SessionType/SessionType.scss
@@ -1,21 +1,23 @@
-.Category{
+.session-type {
     //background-color: aquamarine;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    h1{
+
+    h1 {
         margin: 0px;
         text-align: center;
     }
-    .cat{
+
+    .session-grid {
         display: flex;
         justify-content: space-around;
         align-items: center;
         width: 75vw;
 
-        div{
+        div {
             background-color: white;
             display: flex;
             flex-direction: column;
@@ -28,18 +30,20 @@
             border-radius: 10px;
             border: 4px solid #004dff;
             padding: 10px;
-            &:hover{
-                border:6px solid #093bb1;
+
+            &:hover {
+                border: 6px solid #093bb1;
                 cursor: pointer;
                 //background-color: rgba(153, 209, 235, 0.082);
             }
 
-            img{
+            img {
                 height: 60%;
                 width: 80%;
                 object-fit: contain;
             }
-            span{
+
+            span {
                 font-size: 20px;
                 display: flex;
                 align-items: center;
@@ -51,23 +55,27 @@
     }
 }
 
- @media (max-width: 780px) {
-    .Category{
-        h1{
-                font-size: 2rem;
-            }
+@media (max-width: 780px) {
+    .session-type {
+        h1 {
+            font-size: 2rem;
+        }
+
         height: 80vh;
-        div{
+
+        div {
             //background-color: #004dff;
             flex-direction: column;
             height: 50vh;
             margin: 0%;
-            .cat-cont{
+
+            .session-card {
                 margin: 10px;
                 flex-direction: row;
                 width: 70%;
                 height: 200px;
-                img{
+
+                img {
                     width: 35%;
                     height: 120px;
                 }
@@ -75,26 +83,31 @@
         }
     }
 
- }
- @media (max-width: 450px) {
-    .Category{
-        h1{
-                font-size: 1.5rem;
-            }
+}
+
+@media (max-width: 450px) {
+    .session-type {
+        h1 {
+            font-size: 1.5rem;
+        }
+
         height: 80vh;
-        div{
+
+        div {
             //background-color: #004dff;
             flex-direction: column;
             height: 50vh;
             margin: 0%;
-            .cat-cont{
+
+            .session-card {
                 margin: 10px;
                 padding: 10px;
                 flex-direction: row;
                 width: 90%;
                 height: 150px;
                 font-size: 10px;
-                img{
+
+                img {
                     width: 35%;
                     height: 100px;
                 }
@@ -102,4 +115,4 @@
         }
     }
 
- }
+}
